BAU fix styles that are causing Release Case button to have wrong colour text

--- a/app/assets/stylesheets/tabs.scss
+++ b/app/assets/stylesheets/tabs.scss
@@ -1,6 +1,6 @@
 .tabs {
 
-  a:link {
+  table a:link {
     color: #005ea5;
   }
 
